--- a/locale/en.json
+++ b/locale/en.json
@@ -1,15 +1,31 @@
 {
-    "metadata": {
-      "title": "Sa7a Box — Premium High-Protein Meals for Athletes & Hustlers",
-      "description": "Premium high-protein meals designed for athletes and hustlers. Gym pickup and fast delivery across Tunisia. Fuel your body with Sa7a Box.",
-      "ogTitle": "Sa7a Box — Premium High-Protein Meals",
-      "ogDescription": "Fuel your hustle with premium high-protein meals. Gym pickup & fast delivery across Tunisia.",
-      "twitterTitle": "Sa7a Box — Fuel Your Hustle",
-      "twitterDescription": "Premium high-protein meals for athletes. Gym pickup & fast delivery across Tunisia."
-    },
-    "brand": {
-      "name": "Sa7a Box",
-      "tagline": "Fuel Your Hustle",
-      "description": "Premium high-protein meals designed for performance."
+  "metadata": {
+    "title": "Sa7a Box — Premium High-Protein Meals for Athletes & Hustlers",
+    "description": "Premium high-protein meals designed for athletes and hustlers. Gym pickup and fast delivery across Tunisia. Fuel your body with Sa7a Box.",
+    "ogTitle": "Sa7a Box — Premium High-Protein Meals",
+    "ogDescription": "Fuel your hustle with premium high-protein meals. Gym pickup & fast delivery across Tunisia.",
+    "twitterTitle": "Sa7a Box — Fuel Your Hustle",
+    "twitterDescription": "Premium high-protein meals for athletes. Gym pickup & fast delivery across Tunisia."
+  },
+  "brand": {
+    "name": "Sa7a Box",
+    "tagline": "Fuel Your Hustle",
+    "description": "Premium high-protein meals designed for performance."
+  },
+  "header": {
+    "order": "Order"
+  },
+  "hero": {
+    "category": "PREMIUM NUTRITION",
+    "headlinePart1": "Koul Mlih,",
+    "headlinePart2": "Trena Mlih.",
+    "description": "Authentic, high-protein meals to fuel your Tunisian hustle.",
+    "orderNow": "Order Now",
+    "findUs": "Find Us",
+    "features": {
+      "gymPickup": "Gym Pickup",
+      "freshDaily": "Fresh Daily",
+      "delivery": "Delivery"
     }
   }
+}
