--- a/locale/en.json
+++ b/locale/en.json
@@ -117,5 +117,29 @@
 		"checkout": {
 			"comingSoon": "Checkout coming soon!"
 		}
+	},
+	"builder": {
+		"title": "Build Your Meal",
+		"subtitle": "Customize your nutrition exactly how you want it.",
+		"steps": {
+			"meal": "Meal",
+			"macros": "Macros"
+		},
+		"callout": {
+			"title": "Build Your Meal",
+			"description": "Customize your nutrition exactly how you want it. Choose your base, adjust macros, and create the perfect meal for your goals.",
+			"feature1": "Custom Macros",
+			"feature2": "Real-time Pricing",
+			"feature3": "Perfect Portions",
+			"cta": "Start Building"
+		},
+		"selectMeal": "Select Your Base Meal",
+		"size": "Size",
+		"spicyLevel": "Spicy Level",
+		"noOnions": "No Onions",
+		"nutritionSummary": "Nutrition Summary",
+		"total": "Total",
+		"next": "Next",
+		"addToOrder": "Add to Order"
 	}
 }
