--- a/locale/fr.json
+++ b/locale/fr.json
@@ -1,70 +1,147 @@
 {
 	"metadata": {
-		"title": "Sa7a Box — Repas Riches en Protéines Premium pour Athlètes & Entrepreneurs",
-		"description": "Repas riches en protéines premium conçus pour les athlètes et les entrepreneurs. Retrait en salle de sport et livraison rapide en Tunisie. Alimentez votre corps avec Sa7a Box.",
-		"ogTitle": "Sa7a Box — Repas Riches en Protéines Premium",
-		"ogDescription": "Alimentez votre dynamisme avec des repas riches en protéines premium. Retrait en salle de sport et livraison rapide en Tunisie.",
-		"twitterTitle": "Sa7a Box — Alimentez Votre Dynamisme",
-		"twitterDescription": "Repas riches en protéines premium pour athlètes. Retrait en salle de sport et livraison rapide en Tunisie."
+		"title": "Sa7a Box — Premium High-Protein Meals for Athletes & Hustlers",
+		"description": "Premium high-protein meals designed for athletes and hustlers. Gym pickup and fast delivery across Tunisia. Fuel your body with Sa7a Box.",
+		"ogTitle": "Sa7a Box — Premium High-Protein Meals",
+		"ogDescription": "Fuel your hustle with premium high-protein meals. Gym pickup & fast delivery across Tunisia.",
+		"twitterTitle": "Sa7a Box — Fuel Your Hustle",
+		"twitterDescription": "Premium high-protein meals for athletes. Gym pickup & fast delivery across Tunisia."
 	},
 	"brand": {
 		"name": "Sa7a Box",
-		"tagline": "Alimentez Votre Dynamisme",
-		"description": "Repas riches en protéines premium conçus pour la performance."
+		"tagline": "Fuel Your Hustle",
+		"description": "Premium high-protein meals designed for performance."
 	},
 	"header": {
-		"order": "Commander"
+		"order": "Order"
 	},
 	"hero": {
-		"category": "NUTRITION PREMIUM",
+		"category": "PREMIUM NUTRITION",
 		"headlinePart1": "Koul Mlih,",
 		"headlinePart2": "Trena Mlih.",
-		"description": "Repas authentiques riches en protéines pour alimenter votre dynamisme tunisien.",
-		"orderNow": "Commander",
-		"findUs": "Nous Trouver",
+		"description": "Authentic, high-protein meals to fuel your Tunisian hustle.",
+		"orderNow": "Order Now",
+		"findUs": "Find Us",
 		"features": {
-			"gymPickup": "Retrait Salle",
-			"freshDaily": "Frais Quotidien",
-			"delivery": "Livraison"
+			"gymPickup": "Gym Pickup",
+			"freshDaily": "Fresh Daily",
+			"delivery": "Delivery"
 		}
 	},
 	"menu": {
-		"title": "Notre Sélection",
-		"subtitle": "Conçue pour la performance.",
+		"title": "Our Fuel Selection",
+		"subtitle": "Designed for performance.",
 		"categories": {
 			"powerBoxes": "Power Boxes",
-			"greenFresh": "Vert & Frais",
-			"proteinDesserts": "Desserts Protéinés"
+			"greenFresh": "Green & Fresh",
+			"proteinDesserts": "Protein Desserts",
+			"box": "Box",
+			"salad": "Salad",
+			"side": "Side",
+			"drink": "Drink",
+			"sides": "Sides",
+			"drinks": "Drinks"
 		},
 		"currency": "TND",
 		"tags": {
-			"highProtein": "Haute Protéine",
-			"bulking": "Prise de Masse",
-			"fresh": "Frais",
-			"traditional": "Traditionnel",
-			"lowCarb": "Faible Glucides"
+			"highProtein": "High Protein",
+			"bulking": "Bulking",
+			"fresh": "Fresh",
+			"traditional": "Traditional",
+			"lowCarb": "Low Carb"
 		},
 		"items": {
 			"supercut": {
 				"name": "Supercut",
-				"description": "Blanc de poulet maigre, quinoa, légumes vapeur."
+				"description": "Lean chicken breast, quinoa, steamed veggies."
 			},
 			"superman": {
 				"name": "Superman",
-				"description": "Steak grillé, purée de patate douce, haricots verts."
+				"description": "Grilled steak, sweet potato mash, green beans."
 			},
 			"carthageCaesar": {
-				"name": "César de Carthage",
-				"description": "Laitue romaine fraîche, poulet grillé, pois chiches, sauce césar."
+				"name": "Carthage Caesar",
+				"description": "Fresh romaine, grilled chicken, chickpeas, caesar dressing."
 			},
 			"tunisianTuna": {
-				"name": "Thon Tunisien",
-				"description": "Thon, olives, tomates, concombres, huile d'olive saine."
+				"name": "Tunisian Tuna",
+				"description": "Tuna, olives, tomatoes, cucumbers, healthy olive oil."
 			},
 			"oatCookies": {
-				"name": "Cookies Protéinés à l'Avoine",
-				"description": "Avoine saine avec protéine de lactosérum et chocolat noir."
+				"name": "Protein Oat Cookies",
+				"description": "Healthy oats with whey protein and dark chocolate."
+			},
+			"riceBowl": {
+				"name": "Rice Bowl",
+				"description": "Steamed rice with herbs and spices."
+			},
+			"proteinShake": {
+				"name": "Protein Shake",
+				"description": "Whey protein shake with your choice of flavor."
 			}
+		},
+		"nutrition": {
+			"calories": "Cal",
+			"protein": "Protein",
+			"carbs": "Carbs",
+			"fat": "Fat",
+			"fiber": "Fiber"
+		},
+		"customize": {
+			"extras": "Add Extras",
+			"sauce": "Choose Sauce",
+			"notes": "Special Instructions",
+			"notesPlaceholder": "Any special requests?"
+		},
+		"quantity": "Quantity",
+		"total": "Total",
+		"addToCart": "Add to Order",
+		"cart": {
+			"title": "Your Order",
+			"description": "Review and edit your items",
+			"subtotal": "Subtotal",
+			"item": "item",
+			"items": "items",
+			"sauce": "Sauce",
+			"extras": "Extras",
+			"remove": "Remove item",
+			"continueBrowsing": "Continue",
+			"checkout": "Checkout",
+			"review": "Review Order",
+			"empty": {
+				"title": "Your order is empty",
+				"description": "Add items from the menu to get started",
+				"action": "Browse Menu"
+			}
+		},
+		"checkout": {
+			"comingSoon": "Checkout coming soon!"
+		}
+	},
+	"ingredients": {
+		"rice": {
+			"name": "Brown Rice",
+			"description": "Steamed brown rice container"
+		},
+		"chickenBreast": {
+			"name": "Chicken Breast",
+			"description": "Grilled lean chicken breast"
+		},
+		"crevette": {
+			"name": "Crevette",
+			"description": "Fresh grilled shrimp"
+		},
+		"salad": {
+			"name": "Mixed Salad",
+			"description": "Fresh mixed greens"
+		},
+		"harissaLight": {
+			"name": "Harissa Light",
+			"description": "Mild spicy harissa sauce"
+		},
+		"oliveOil": {
+			"name": "Olive Oil",
+			"description": "Extra virgin olive oil"
 		}
 	}
 }
