--- a/locale/fr.json
+++ b/locale/fr.json
@@ -120,7 +120,28 @@
 	},
 	"builder": {
 		"title": "Build Your Meal",
-		"subtitle": "Customize your nutrition exactly how you want it.",
+		"subtitle": "Pick ingredients, customize quantities, see your macros instantly.",
+		"categories": {
+			"base": "Base",
+			"protein": "Proteins",
+			"veg": "Vegetables",
+			"sauce": "Sauces & Extras",
+			"extra": "Extras"
+		},
+		"summary": {
+			"title": "Your Plate",
+			"nutrition": "Nutrition",
+			"total": "Total"
+		},
+		"customPlate": {
+			"name": "Custom Plate",
+			"description": "Your custom-built meal"
+		},
+		"addToOrder": "Add Plate to Order",
+		"empty": {
+			"title": "Start Building",
+			"description": "Select ingredients to build your custom plate."
+		},
 		"steps": {
 			"meal": "Meal",
 			"macros": "Macros"
@@ -133,23 +154,13 @@
 			"feature3": "Perfect Portions",
 			"cta": "Start Building"
 		},
-		"categories": {
-			"base": "Base",
-			"rice": "Rice",
-			"chickenBreast": "Chicken Breast",
-			"crevette": "Crevette",
-			"salad": "Salad",
-			"harissaLight": "Harissa Light",
-			"oliveOil": "Olive Oil"
-		},
 		"selectMeal": "Select Your Base Meal",
 		"size": "Size",
 		"spicyLevel": "Spicy Level",
 		"noOnions": "No Onions",
 		"nutritionSummary": "Nutrition Summary",
 		"total": "Total",
-		"next": "Next",
-		"addToOrder": "Add to Order"
+		"next": "Next"
 	},
 	"ingredients": {
 		"rice": {
@@ -176,5 +187,25 @@
 			"name": "Olive Oil",
 			"description": "Extra virgin olive oil"
 		}
+	},
+	"checkout": {
+		"title": "Checkout",
+		"name": {
+			"label": "Full Name",
+			"placeholder": "Enter your full name",
+			"description": "We'll use this to contact you"
+		},
+		"phone": {
+			"label": "Phone Number",
+			"placeholder": "+216 XX XXX XXX",
+			"description": "For order confirmation"
+		},
+		"location": {
+			"label": "Location",
+			"placeholder": "Enter your location or pickup address",
+			"description": "Gym pickup location or delivery address"
+		},
+		"submit": "Place Order",
+		"success": "Order submitted! We'll contact you soon."
 	}
 }
